# RCM-f90

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  config.cmake  meson.build
cmake/: RCM-f90.cmake
cmake/compilers/: cray_flags.cmake  gnu_flags.cmake
cmake/export/: rcm-f90-config.cmake.in
src/: CMakeLists.txt  kinds.f90  meson.build  rcm.f90  rcm_kinds.f90
